# binsreg

./: .gitattributes  CHANGELOG.md  README.md
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: ci.yml  publish-python.yml
Python/: binsreg_illustration.py  binsreg_illustration_plot.py
Python/binsreg/: LICENSE.md  README.md  ToBuild.txt  pyproject.toml  setup.cfg
Python/binsreg/src/binsreg/: __init__.py  binsglm.py  binspwc.py  binsqreg.py  binsreg.py  binsregselect.py  binstest.py  funs.py
Python/binsreg/src/binsreg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Python/binsreg/test/: .RData  .Rhistory  Untitled.R  Untitled_rdlocrand.R  bias_bug_test.py  binsreg_illustration_plot_test.py  binsreg_illustration_test.py  binsregselect_bias.py  test.R  test_funs.py  test_pkg.py
Python/binsreg/tests/: __init__.py  test_glm_paths.py  test_numerical_regression.py  test_quantile_alignment.py  test_simulation_helpers.py
Python/binsreg/tests/fixtures/: README.md  numerical-regression.json
Python/binsreg/unused functions/: funs_old.py
R/: binsreg_R_illustration.R  binsreg_illustration.R  binsreg_illustration_plot.R  binsreg_sim.csv
R/binsreg/: .Rbuildignore  .Rhistory  DESCRIPTION  NAMESPACE
stata/: binslogit.ado  binslogit.sthlp  binsprobit.ado  binsprobit.sthlp  binspwc.ado  binspwc.sthlp  binsqreg.ado  binsqreg.sthlp  binsreg.ado  binsreg.pkg  binsreg.sthlp  binsreg_bincount.mo  binsreg_checkdrop.mo  binsreg_cquantile.mo  binsreg_fast_reg.mo  binsreg_functions.do  binsreg_grids.mo  binsreg_illustration.do  binsreg_illustration_plot.do  binsreg_irecode.ado  binsreg_pctile.ado  binsreg_pred.mo  binsreg_pval.mo  binsreg_simdata.dta  binsreg_spdes.mo  binsreg_speedcomparison.do  binsreg_speedtest.do  binsreg_st_spdes.mo  binsreg_stat.mo  binsreg_uniq.mo  binsregselect.ado  binsregselect.sthlp  binsregtest.ado  binsregtest.sthlp  binstest.ado  binstest.sthlp  lbinsreg.mlib  stata.toc
stata/output/: binsreg_out0.log.tex  binsreg_out0.smcl  binsreg_out1.log.tex  binsreg_out1.smcl  binsreg_out10.log.tex  binsreg_out10.smcl  binsreg_out11.log.tex  binsreg_out11.smcl  binsreg_out12.log.tex  binsreg_out12.smcl  binsreg_out13.log.tex  binsreg_out13.smcl  binsreg_out14.log.tex  binsreg_out14.smcl  binsreg_out15.log.tex  binsreg_out15.smcl  binsreg_out16.log.tex  binsreg_out16.smcl  binsreg_out17.log.tex  binsreg_out17.smcl  binsreg_out18.log.tex  binsreg_out18.smcl  binsreg_out19.log.tex  binsreg_out19.smcl  binsreg_out2.log.tex  binsreg_out2.smcl  binsreg_out20.log.tex  binsreg_out20.smcl  binsreg_out21.log.tex  binsreg_out21.smcl  binsreg_out22.log.tex  binsreg_out22.smcl  (+29 more)
(+193 files in other folders)
