[metadata]
name = binsreg
version = 2.1.7
author = Ricardo Masini
author_email = rmasini@princeton.edu
description =  Implements binscatter methods, including partition selection, point estimation, pointwise and uniform inference methods, and graphical procedures.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nppackages/binsreg
project_urls = 
    Bug Tracker = https://github.com/nppackages/binsreg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    pandas>=2.0.0
    scipy
    statsmodels>=0.14.0
    plotnine>=0.13.0

[options.packages.find]
where = src