[metadata]
name = binsreg
version = 3.1.0
author = Matias D. Cattaneo, Richard K. Crump, Max H. Farrell, Yingjie Feng, Ricardo Masini
author_email = Matias D. Cattaneo <matias.d.cattaneo@gmail.com>, Richard K. Crump <richard.crump@gmail.com>, Max H. Farrell <mhfarrell@gmail.com>, Yingjie Feng <fengyingjiepku@gmail.com>, Ricardo Masini <ricardo.masini@gmail.com>
maintainer = Matias D. Cattaneo
maintainer_email = matias.d.cattaneo@gmail.com
description = Implements binscatter methods, including partition selection, point estimation, pointwise and uniform inference methods, and graphical procedures.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-only
url = https://github.com/nppackages/binsreg
project_urls = 
    Homepage = https://nppackages.github.io/
    Bug Tracker = https://github.com/nppackages/binsreg/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires = 
    numpy>=1.23
    pandas>=2.0.0
    scipy>=1.10
    statsmodels>=0.14.0
    plotnine>=0.13.0

[options.extras_require]
dev =
    pytest
    build
    setuptools
    twine
    wheel

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
